feat: 增加删除白板接口, 将c.Get替换为c.GetString
